[project]
name = "geopulse"
version = "0.1.0"
description = "Geopolitical risk probability tracking system with Bayesian DAG"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "anthropic>=0.43",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
geopulse = "geopulse.cli:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
